[package]
name = "native_image_dir"
version = "0.1.0"
edition = "2021"
authors = ["失魂鱼 <satwanjyu@outlook.com>"]
description = "CLI tool to generate native image directories from Flutter assets directory."
repository = "https://github.com/satwanjyu/flutter_native_image_dir"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
